kubernetes/staging/apps/dbms/dragonfly/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow-external
spec:
  podSelector:
    matchLabels:
      app: dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 6379
          protocol: TCP
